# mirrorshades

./: .flake8  .gitignore  .gitpod.yml  .mdlrc  .pre-commit-config.yaml  ChangeLog.md  Dockerfile  MAINTAINERS  MANIFEST.in  README.md  mdl_style.rb  mirrorshades  mirrorshades.py  pyproject.toml  setup.cfg  setup.py  tasks.py
.github/workflows/: ci.yml  test.yml
mirrorshades/: __init__.py  config.py
mirrorshades/agents/: __init__.py  git.py  gitlab.py
src/mirrorshades/: __init__.py  __main__.py  config.py  util.py
src/mirrorshades/agents/: __init__.py  base.py  command.py  git.py  github.py  gitlab.py  rclone.py  rsync.py
tests/: test_mirrorshades.py
