# Copyright The mirrorshades Contributors.
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = [
  "setuptools >= 42.0.0",
  "wheel",
]
build-backend = "setuptools.build_meta"

[tool.pymarkdown]
plugins.md013.code_blocks = false

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
markers = [
  "network: Tests which require network access"
]
