[metadata]
name = mirrorshades
version = attr: mirrorshades.__version__
maintainer = Paul Barker
maintainer-email = pbarker@konsulko.com
license = Apache-2.0
license-file = LICENSE
description = Git repository mirroring tool written in Python.
long-description = file: README.md
long-description-content-type = text/markdown
url = https://gitlab.com/pbarker.dev/mirrorshades
platform = any
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir=
    =src
packages = find:
include_package_data = True
python-requires = >=3.6
install-requires =
    pyyaml

[options.entry_points]
console-scripts =
    mirrorshades = mirrorshades:main

[options.packages.find]
where=src
