# Copyright (c) 2020-2021 Paul Barker <paul@pbarker.dev>
# SPDX-License-Identifier: Apache-2.0

[metadata]
name = mirrorshades
version = attr: mirrorshades.__version__
maintainer = Paul Barker
maintainer-email = paul@pbarker.dev
license = Apache-2.0 AND CC-BY-4.0 AND CC0-1.0
license-files =
    LICENSES/Apache-2.0.txt
    LICENSES/CC-BY-4.0.txt
    LICENSES/CC0-1.0.txt
description = Mirroring tool written in Python.
long-description = file: README.md
long-description-content-type = text/markdown
url = https://sr.ht/~pbarker/mirrorshades/
platform = any
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir=
    =src
packages = find:
include_package_data = True
python-requires = >=3.6
install-requires =
    pyyaml
    desert

[options.entry_points]
console-scripts =
    mirrorshades = mirrorshades:main

[options.packages.find]
where=src
